# tsukuba_garbage_calendar

./: README.md  pyproject.toml
calendar_data/2024/json/: calendar_data.json
calendar_data/2024/xlsx/: 202404_calendar.xlsx  202405_calendar.xlsx  202406_calendar.xlsx  202407_calendar.xlsx  202408_calendar.xlsx  202409_calendar.xlsx  202410_calendar.xlsx  202411_calendar.xlsx  202412_calendar.xlsx  202501_calendar.xlsx  202502_calendar.xlsx  202503_calendar.xlsx  LICENSE
scripts/: generate_json_calendar_data.py  process_calendar.sh
src/tsukuba_garbage_calendar/: __init__.py
