[project]
name = "tsukuba-garbage-calendar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "KyosukeHAGIWARA", email = "kyonspc@gmail.com" }
]
dependencies = [
    "openpyxl>=3.1.3",
    "ruff>=0.4.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tsukuba_garbage_calendar"]
